# ImageHide

./: .gitignore  README.md  __init__.py  cli.py  pyproject.toml  requirements.txt
core/: __init__.py  crypto.py  errors.py  image_io.py  steganography.py
imagehide/: cli.py  gui.py
imagehide/core/: __init__.py  config.py  crypto.py  encoding.py  errors.py  image_io.py  steganography.py
imagehide/tests/: test_crypto.py  test_steganography.py
tests/: test_all.py  test_integration.py
